# term

./: Cargo.toml  README.md
src/: application.rs  config.rs  font.rs  gui.rs  main.rs  term.rs  terminal.rs  window.rs
src/ansi_parser/: Cargo.toml.bak  ansi_sequences.rs  enums.rs  mod.rs  parser.rs  parsers.rs  traits.rs
src/ansi_parser/ansi_sequences/: tests.rs
src/ansi_parser/parsers/: csi.rs  esc.rs  mod.rs  osc.rs  tests.rs
src/debug/: view.rs
src/structs/: buffer.rs  cell.rs  config.rs  cursor.rs  grid.rs  mod.rs  terminalsize.rs
src/term/: colors.rs  font.rs  graphics.rs  mod.rs  pty_reader.rs  term.rs  terminal_output.rs
src/terminal/: colors.rs  graphics.rs  pty_reader.rs  term.rs
